<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/custom_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="2" >

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@color/black_overlay"
            android:prompt="@string/all"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/name_et1"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/name_input" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >
         <EditText
            android:id="@+id/type_et"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/type_input" />
        <EditText
            android:id="@+id/name_et2"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:hint="@string/name_input" />
        
    </LinearLayout>

    <Button
        android:id="@+id/add_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radiolinlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@color/black_overlay"
        android:text="@string/add_btn" />

    <RadioGroup
        android:id="@+id/radiolinlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <RadioButton
            android:id="@+id/custom_rbm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/custom_rbm_text" />

        <RadioButton
            android:id="@+id/type_rbm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/type_rbm_text" />
    </RadioGroup>

</RelativeLayout>